Remove unneeded left padding from ul Fix spacing

--- a/css/outer/docs/categories.less
+++ b/css/outer/docs/categories.less
@@ -6,9 +6,9 @@
 }
 
 .categories {
-  li {
-    list-style: none;
-  }
+  ul { padding-left: 0; }
+
+  li { list-style: none; }
 
   a {
     display: block;
@@ -22,9 +22,7 @@
     .clearfix;
   }
 
-  i {
-    font-size: 48px;
-  }
+  i { font-size: 48px; }
 
   hgroup {
     float: right;
@@ -34,7 +32,7 @@
   h2 {
     font-size: 20px;
     margin: 0;
-    padding-top: 5px;
+    padding-top: 7px;
   }
 
   h3 {
